# GradePilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Gradepilot_Architecture.md  README.md  agent_implementation_plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  terraform.yml  tests.yml
GradePilot/: README.md
HW3/: Kimiwa SadatHw3csc460.ipynb
app/: main.py  schemas.py
app/agents/: __init__.py
app/core/: config.py  security.py
app/db/: __init__.py  crud.py  models.py  session.py
app/routers/: auth.py  calendar.py  chat.py  classes.py  integrations_google.py  rag.py  replanner.py  settings.py  summarise.py
app/services/: datetime_parse.py  gemini_rate_limit.py  google_calendar.py  learning_resources.py  pdf_text.py  practice.py  study_plan.py  study_plan_jobs.py  study_plan_semester.py  summarise.py
docs/: CODE_REVIEW.md  TPM_PROCESS.md  testing.md
docs/db/: 001_rag_pgvector.sql  002_rag_documents.sql  003_google_integrations.sql  004_user_settings.sql  005_chat.sql  006_classes_deadlines_timeline.sql  007_langgraph_checkpoints.sql  008_langgraph_checkpoints_repair.sql  009_class_meeting_pattern.sql  010_user_study_preferences.sql  011_class_grade_book.sql
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
gradepilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_api_endpoints_coverage.py  test_auth.py  test_chat.py  test_classes_replanner_hook.py  test_deadline_extract.py  test_gemini_rate_limit.py  test_google_calendar_sync.py  test_grade_book.py  test_learning_resources.py  test_learning_resources_service.py  test_onboarding_gate.py  test_practice.py  test_rag_answer_citations.py  test_rag_chunking.py  test_rag_retrieve_sqlite_fallback.py  test_semester_study_plan_service.py  test_services.py  test_settings.py  test_study_plan.py  test_syllabus_bootstrap_service.py
(+71 files in other folders)
